Веб приложение перенесено в docker, исправлена логика подсветки

--- a/server/.env
+++ b/server/.env
@@ -3,8 +3,12 @@ EDITABLE_DIRECTORY=./rules
 FLASK_SECRET_KEY=gewfipewibferibwobgvfiogrvfdknksdfjsdfew
 
 SITE_PASSWORD=hfuie2ehuifb3wuifbwefbiejwfbj987436cq
+
 WEB_PORT=9002
 
 TCP_PORT=9001
 
-DB_URL=mysql+pymysql://some_user:some_password@127.0.0.1:3306/monitor
+MYSQL_ROOT_PASSWORD=here_could_be_password
+MYSQL_USER=some_user
+MYSQL_PASSWORD=some_password
+MYSQL_DB=monitor
