online append of streams

--- a/server/web_app/Dockerfile
+++ b/server/web_app/Dockerfile
@@ -3,6 +3,6 @@ FROM python:3.9
 WORKDIR /app
 COPY . .
 
-RUN pip install flask pymysql sqlalchemy dotenv
+RUN pip install flask pymysql sqlalchemy dotenv flask-socketio
 
 CMD ["python", "web_server.py"]
